--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -13,8 +13,30 @@
         android:layout_height="wrap_content"
         android:text="Fragmento A"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/edMsg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnAbrirFragB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Abrir frag_b"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edMsg" />
 </android.support.constraint.ConstraintLayout>
